2002-10-19  Dave Camp  <dave@ximian.com>

	* configure.in: Take out -DBONOBO_DISABLE_DEPRECATED until the 
	make_registration_id api is worked out.

2002-10-18  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-directory-async.c (ready_callback_key_compare):
	More casts.

2002-10-18  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file.c (nautilus_file_compare_for_sort_internal): 
	* src/file-manager/fm-icon-view.c (fm_icon_view_compare_files): 
	* src/file-manager/fm-icon-container.c (get_icon_view):
	Remove type checks, was showing up in profiles.

	* libnautilus-private/nautilus-directory.c (nautilus_directory_notify_files_added):
	Don't leak directory_uri

2002-10-18  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-directory-async.c:
	The HP-UX compiler is an anal retentive bastard.

2002-10-16  Alex Duggan  <aldug@astrolinux.com>
	* configure.in
   require gnome-desktop >= 2.1.0 (fixes #95979)
   
2002-10-16  Alexander Larsson  <alexl@redhat>

	* libnautilus-private/nautilus-dnd.h:
	Add application/x-rootwindow-drop.
	
	* libnautilus-private/nautilus-icon-private.h:
	* libnautilus-private/nautilus-icon-container.[ch]:
	Moved dnd init/fini to realize/unrealize.
	Add nautilus_icon_container_set/get_is_desktop().
	
	* libnautilus-private/nautilus-icon-dnd.[ch]:
	Implement rootwindow drops.
	
	* src/file-manager/fm-desktop-icon-view.c:
	call nautilus_icon_container_set_is_desktop()

2002-10-15  Bastien Nocera  <hadess@hadess.net>

        * src/nautilus-shell-ui.xml: add BackSpace as a key shortcut for
	"Go Up" (like Windows does)

=== nautilus 2.1.1 ===

2002-10-14  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Updated
	
	* configure.in:
	Bump version to 2.1.1
	Require libgnomeui 2.1.1 and eel 2.1.1, pango 1.1.2

2002-10-11  Dave Camp  <dave@ximian.com>

	* src/file-manager/fm-directory-view.c
	(fm_directory_view_destroy): Set recent_model to NULL rather than
	model.
